2005-08-10  Bruno Haible  <bruno@clisp.org>

	* configure.ac (SUBDIR_libasprintf, SUBDIR_glocale): Remove AC_SUBSTs.
	(ENABLE_LIBASPRINTF, ENABLE_GLOCALE): New automake conditionals.
	* Makefile.am (SUBDIR_libasprintf, SUBDIR_glocale): New variables.
	(SUBDIRS): Use them.
	(DIST_SUBDIRS): Remove variable. Automake computes it correctly through
	the conditionals.
	Suggested by Stepan Kasal <kasal@ucw.cz>.

2005-07-31  Bruno Haible  <bruno@clisp.org>

	* glocale: New directory.
	* configure.ac (SUBDIR_glocale): New variable.
	* Makefile.am (SUBDIRS): Add SUBDIR_glocale.
	(DIST_SUBDIRS): Add glocale.

2005-07-26  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Move the AM_GNU_GETTEXT invocation early, since it
	modifies CPPFLAGS.

2005-07-16  Bruno Haible  <bruno@clisp.org>

	* tests: New directory.
	* configure.ac (LIBSCHED): New variable.
	Add AC_CONFIG of tests/Makefile.
	* Makefile.am (SUBDIRS, DIST_SUBDIRS): Add tests.
	(config.h.msvc): Define USE_WIN32_THREADS.

2005-07-05  Bruno Haible  <bruno@clisp.org>

	* configure.ac (DLL_VARIABLE): Define also as nonempty when building
	shared libraries with mingw.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* windows/intl.rc: Bump version number to 0.14.5.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* windows/intl.rc: Bump version number to 0.14.4.

2005-03-22  Bruno Haible  <bruno@clisp.org>

	* configure.ac (AC_CONFIG_AUX_DIR): Use ../build-aux.
	* Makefile.am (ACLOCAL_AMFLAGS): Replace config/m4 with m4.

2005-03-14  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.3 released.

2005-03-08  Bruno Haible  <bruno@clisp.org>

	* windows/intl.rc: Bump version number to 0.14.3.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.2 released.

2005-02-13  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_FUNC_STRTOUL instead of
	AC_CHECK_FUNCS(strtoul).
