@@ -35,9 +35,11 @@ AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_YACC
 
+gt_JAVA_CHOICE
+
 gt_JAVACOMP
 AC_CHECK_PROG(JAR, jar, jar)
-if test -n "$HAVE_JAVACOMP" && test -n "$JAR"; then
+if test -n "$HAVE_JAVACOMP" && test -n "$JAR" && test "$JAVA_CHOICE" != no; then
   BUILDJAVA=yes
 else
   BUILDJAVA=no
