@@ -1,3 +1,9 @@
+2005-08-13  Bruno Haible  <bruno@clisp.org>
+
+	New configure options --disable-java, --disable-native-java.
+	* configure.ac: Invoke gt_JAVA_CHOICE.
+	(BUILDJAVAEXE, BUILDJAVA): Use it.
+
 2005-08-11  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: Accept --without-emacs option.
